<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sub_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            android:paddingLeft="18dp"
            android:paddingTop="10dp"
            android:paddingRight="18dp"
            android:paddingBottom="10dp"
            android:text="@{viewModel.election.name}"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/detail_date_text_view"
            electionDay="@{viewModel.election.electionDay}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_header" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/election_information"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/detail_date_text_view"
            app:layout_constraintStart_toStartOf="@+id/detail_date_text_view"
            app:layout_constraintTop_toBottomOf="@+id/detail_date_text_view" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/save_election_button"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/general_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_information" />

            <TextView
                android:id="@+id/voting_locations_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voting_locations" />


            <TextView
                android:id="@+id/ballot_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ballot_information" />

        </LinearLayout>

        <Button
            android:id="@+id/save_election_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:text="@{viewModel.saveButtonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>